@@ -4,7 +4,6 @@ import lombok.extern.log4j.Log4j2;
 import org.apache.commons.lang.StringUtils;
 import org.json.JSONArray;
 import org.json.JSONObject;
-
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
@@ -13,21 +12,39 @@ import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Random;
 
 @Log4j2
-public class Requests{
-	private final static char[] MULTIPART_CHARS =
+public class Requests {
+	private static final String ACCEPT = "Authorization";
+
+	private static final String API = "/api/";
+	private static final String AUTHORIZATION = "Authorization";
+	private static final String GET = "GET";
+
+	private static final String HTTPS = "https://";
+	private static final String POST = "POST";
+	private static final String PUT = "PUT";
+	private static final String CONTENT_TYPE = "Content-Type";
+	private static final char[] MULTIPART_CHARS =
 			"-_1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
 					.toCharArray();
+	private static final Random rand = new Random();
+
 	/**
-	 * https://developer.veevavault.com/api/18.3/#submitting-a-query
+	 * <a href="https://developer.veevavault.com/api/18.3/#submitting-a-query">...</a>
 	 *
 	 * @return Returns a veevaResponse.
 	 */
 	public static VeevaResponse getQuery(String sessionId, String host, String apiVersion, String query) throws Exception {
 
-		String urlStr = "https://" + host + "/api/" + apiVersion + "/query";
+		String urlStr = HTTPS + host + API + apiVersion + "/query";
 		log.debug("Using urlStr: {}", urlStr);
 		URL url = new URL(urlStr);
 
@@ -47,17 +64,17 @@ public class Requests{
 			if (postData.length() != 0) {
 				postData.append('&');
 			}
-			postData.append(URLEncoder.encode(param.getKey(), "UTF-8"));
+			postData.append(URLEncoder.encode(param.getKey(), StandardCharsets.UTF_8));
 			postData.append('=');
-			postData.append(URLEncoder.encode(String.valueOf(param.getValue()), "UTF-8"));
+			postData.append(URLEncoder.encode(String.valueOf(param.getValue()), StandardCharsets.UTF_8));
 		}
 		byte[] postDataBytes = postData.toString().getBytes(StandardCharsets.UTF_8);
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("POST");
+		con.setRequestMethod(POST);
 		log.debug("Using Session Id: {}...", sessionId.substring(0, 10));
-		con.setRequestProperty("Authorization", sessionId);
-		con.setRequestProperty("accept", "*/*");
+		con.setRequestProperty(AUTHORIZATION, sessionId);
+		con.setRequestProperty(ACCEPT, "*/*");
 		con.setDoOutput(true);
 
 		OutputStreamWriter osw = new OutputStreamWriter(
@@ -75,14 +92,14 @@ public class Requests{
 	}
 
 	/**
-	 * https://developer.veevavault.com/api/18.3/#bulk-document-state-change => but this method is only changing a single document/binder
+	 * <a href="https://developer.veevavault.com/api/18.3/#bulk-document-state-change">...</a> => but this method is only changing a single document/binder
 	 *
-	 * @return Returns a veevaResponse.
+	 * @return Returns a VeevaResponse.
 	 */
 	public static VeevaResponse changeStatus(String sessionId, String host, String type, String apiVersion,
                                              String itemId, String lifecycleAction, String version) throws Exception {
 
-		String urlStr = null;
+		String urlStr;
 
 		if (StringUtils.isBlank(version)) {
 			//retrieve the last version of that document/binder
@@ -94,18 +111,19 @@ public class Requests{
 			urlStr = getUrlWithLatestVersionFromGetVersions(listIds) + "/lifecycle_actions/" + lifecycleAction;
 
 
-		} else {
+		}
+		else {
 			String[] majorMinorVersion = version.split("\\.");
-			urlStr = "https://" + host + "/api/" + apiVersion + "/objects/" + type + "/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1] + "/lifecycle_actions/" + lifecycleAction;
+			urlStr = HTTPS + host + API + apiVersion + "/objects/" + type + "/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1] + "/lifecycle_actions/" + lifecycleAction;
 		}
 
 
 		URL url = new URL(urlStr);
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("PUT");
-		con.setRequestProperty("Authorization", sessionId);
-		con.setRequestProperty("accept", "*/*");
+		con.setRequestMethod(PUT);
+		con.setRequestProperty(AUTHORIZATION, sessionId);
+		con.setRequestProperty(ACCEPT, "*/*");
 		con.setDoOutput(true);
 
 		int responseCode = con.getResponseCode();
@@ -116,7 +134,7 @@ public class Requests{
 	}
 
 	/**
-	 * https://developer.veevavault.com/api/18.3/#retrieve-user-actions
+	 * <a href="https://developer.veevavault.com/api/18.3/#retrieve-user-actions">...</a>
 	 *
 	 * @return Returns a veevaResponse.
 	 */
@@ -125,7 +143,7 @@ public class Requests{
 		String urlStr;
 		if (StringUtils.isNotBlank(version)) {
 			String[] majorMinorVersion = version.split("\\.");
-			urlStr = "https://" + host + "/api/" + apiVersion + "/objects/" + type + "/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1] + "/lifecycle_actions";
+			urlStr = HTTPS + host + API + apiVersion + "/objects/" + type + "/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1] + "/lifecycle_actions";
 		} else {
 			//retrieve the last version of that document/binder
 			VeevaResponse veevaResponse = getVersions(sessionId, host, type, apiVersion, itemId);
@@ -139,9 +157,9 @@ public class Requests{
 		URL url = new URL(urlStr);
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("GET");
-		con.setRequestProperty("Authorization", sessionId);
-		con.setRequestProperty("accept", "*/*");
+		con.setRequestMethod(GET);
+		con.setRequestProperty(AUTHORIZATION, sessionId);
+		con.setRequestProperty(ACCEPT, "*/*");
 		con.setDoOutput(true);
 
 		int responseCode = con.getResponseCode();
@@ -152,27 +170,27 @@ public class Requests{
 	}
 
 	/**
-	 * https://developer.veevavault.com/api/18.3/#retrieve-binder
-	 * https://developer.veevavault.com/api/18.3/#retrieve-document
+	 * <a href="https://developer.veevavault.com/api/18.3/#retrieve-binder">...</a>
+	 * <a href="https://developer.veevavault.com/api/18.3/#retrieve-document">...</a>
 	 *
-	 * @return Returns a veevaResponse.
+	 * @return Returns a VeevaResponse.
 	 */
 	public static VeevaResponse retrieveMetadata(String sessionId, String host, String type, String apiVersion, String itemId, String version) throws Exception {
 
 		String urlStr;
 		if (StringUtils.isNotBlank(version)) {
 			String[] majorMinorVersion = version.split("\\.");
-			urlStr = "https://" + host + "/api/" + apiVersion + "/objects/" + type + "/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1];
+			urlStr = HTTPS + host + API + apiVersion + "/objects/" + type + "/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1];
 		} else {
-			urlStr = "https://" + host + "/api/" + apiVersion + "/objects/" + type + "/" + itemId;
+			urlStr = HTTPS + host + API + apiVersion + "/objects/" + type + "/" + itemId;
 		}
 
 		URL url = new URL(urlStr);
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("GET");
-		con.setRequestProperty("Authorization", sessionId);
-		con.setRequestProperty("accept", "*/*");
+		con.setRequestMethod(GET);
+		con.setRequestProperty(AUTHORIZATION, sessionId);
+		con.setRequestProperty(ACCEPT, "*/*");
 		con.setDoOutput(true);
 
 		int responseCode = con.getResponseCode();
@@ -183,8 +201,8 @@ public class Requests{
 	}
 
 	/**
-	 * https://developer.veevavault.com/api/18.3/#download-document-file
-	 * https://developer.veevavault.com/api/18.3/#download-document-version-file
+	 * <a href="https://developer.veevavault.com/api/18.3/#download-document-file">...</a>
+	 * <a href="https://developer.veevavault.com/api/18.3/#download-document-version-file">...</a>
 	 *
 	 * @return Returns a veevaResponse.
 	 */
@@ -193,17 +211,17 @@ public class Requests{
 		String urlStr;
 		if (StringUtils.isNotBlank(version)) {
 			String[] majorMinorVersion = version.split("\\.");
-			urlStr = "https://" + host + "/api/" + apiVersion + "/objects/documents/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1] + "/file";
+			urlStr = HTTPS + host + API + apiVersion + "/objects/documents/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1] + "/file";
 		} else {
-			urlStr = "https://" + host + "/api/" + apiVersion + "/objects/documents/" + itemId + "/file";
+			urlStr = HTTPS + host + API + apiVersion + "/objects/documents/" + itemId + "/file";
 		}
 
 		URL url = new URL(urlStr);
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("GET");
-		con.setRequestProperty("Authorization", sessionId);
-		con.setRequestProperty("accept", "*/*");
+		con.setRequestMethod(GET);
+		con.setRequestProperty(AUTHORIZATION, sessionId);
+		con.setRequestProperty(ACCEPT, "*/*");
 		con.setDoOutput(true);
 
 		int responseCode = con.getResponseCode();
@@ -214,8 +232,8 @@ public class Requests{
 	}
 
 	/**
-	 * https://developer.veevavault.com/api/18.3/#retrieve-document-version-renditions
-	 * https://developer.veevavault.com/api/18.3/#download-document-version-rendition-file
+	 * <a href="https://developer.veevavault.com/api/18.3/#retrieve-document-version-renditions">...</a>
+	 * <a href="https://developer.veevavault.com/api/18.3/#download-document-version-rendition-file">...</a>
 	 *
 	 * @return Returns a veevaResponse.
 	 */
@@ -224,17 +242,17 @@ public class Requests{
 		String urlStr;
 		if (StringUtils.isNotBlank(version)) {
 			String[] majorMinorVersion = version.split("\\.");
-			urlStr = "https://" + host + "/api/" + apiVersion + "/objects/documents/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1] + "/renditions/" + renditionType;
+			urlStr = HTTPS + host + API + apiVersion + "/objects/documents/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1] + "/renditions/" + renditionType;
 		} else {
-			urlStr = "https://" + host + "/api/" + apiVersion + "/objects/documents/" + itemId + "/renditions/" + renditionType;
+			urlStr = HTTPS + host + API + apiVersion + "/objects/documents/" + itemId + "/renditions/" + renditionType;
 		}
 
 		URL url = new URL(urlStr);
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("GET");
-		con.setRequestProperty("Authorization", sessionId);
-		con.setRequestProperty("accept", "*/*");
+		con.setRequestMethod(GET);
+		con.setRequestProperty(AUTHORIZATION, sessionId);
+		con.setRequestProperty(ACCEPT, "*/*");
 		con.setDoOutput(true);
 
 		int responseCode = con.getResponseCode();
@@ -245,7 +263,7 @@ public class Requests{
 	}
 
 	public static HttpURLConnection postSessionRequest(String host, String apiVersion, String user, String pass) throws Exception {
-		String urlStr = "https://" + host + "/api/" + apiVersion + "/auth";
+		String urlStr = HTTPS + host + API + apiVersion + "/auth";
 		URL url = new URL(urlStr);
 
 		Map<String, Object> params = new LinkedHashMap<>();
@@ -258,16 +276,16 @@ public class Requests{
 			if (postData.length() != 0) {
 				postData.append('&');
 			}
-			postData.append(URLEncoder.encode(param.getKey(), "UTF-8"));
+			postData.append(URLEncoder.encode(param.getKey(), StandardCharsets.UTF_8));
 			postData.append('=');
-			postData.append(URLEncoder.encode(String.valueOf(param.getValue()), "UTF-8"));
+			postData.append(URLEncoder.encode(String.valueOf(param.getValue()), StandardCharsets.UTF_8));
 		}
 
 		byte[] postDataBytes = postData.toString().getBytes(StandardCharsets.UTF_8);
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("POST");
-		con.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
+		con.setRequestMethod(POST);
+		con.setRequestProperty(CONTENT_TYPE, "application/x-www-form-urlencoded");
 		con.setDoOutput(true);
 
 		OutputStreamWriter osw = new OutputStreamWriter(
@@ -283,7 +301,8 @@ public class Requests{
 		return con;
 	}
 
-	/**https://developer.veevavault.com/api/18.3/#user-name-and-password
+	/**
+	 * <a href="https://developer.veevavault.com/api/18.3/#user-name-and-password">...</a>
 	 *
 	 *
 	 * @return Returns a VeevaResponse.
@@ -294,20 +313,20 @@ public class Requests{
 	}
 
 	/**
-	 * https://developer.veevavault.com/api/18.3/#retrieve-document-versions
+	 * <a href="https://developer.veevavault.com/api/18.3/#retrieve-document-versions">...</a>
 	 *
 	 * @return Returns a veevaResponse.
 	 */
 	public static VeevaResponse getVersions(String sessionId, String host, String type, String apiVersion, String itemId) throws Exception {
 
-		String urlStr = "https://" + host + "/api/" + apiVersion + "/objects/" + type + "/" + itemId + "/versions";
+		String urlStr = HTTPS + host + API + apiVersion + "/objects/" + type + "/" + itemId + "/versions";
 
 		URL url = new URL(urlStr);
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("GET");
-		con.setRequestProperty("Authorization", sessionId);
-		con.setRequestProperty("accept", "*/*");
+		con.setRequestMethod(GET);
+		con.setRequestProperty(AUTHORIZATION, sessionId);
+		con.setRequestProperty(ACCEPT, "*/*");
 		con.setDoOutput(true);
 
 		int responseCode = con.getResponseCode();
@@ -318,22 +337,22 @@ public class Requests{
 	}
 
 	/**
-	 * https://developer.veevavault.com/api/18.3/#create-documents
+	 * <a href="https://developer.veevavault.com/api/18.3/#create-documents">...</a>
 	 *
 	 * @return Returns a veevaResponse.
 	 */
 	public static VeevaResponse createDocument(String sessionId, String host, String apiVersion, Map<String, Object> values, byte[] byteFiles, String fileName)
 			throws Exception {
-		String urlStr = "https://" + host + "/api/" + apiVersion + "/objects/documents";
+		String urlStr = HTTPS + host + API + apiVersion + "/objects/documents";
 		URL url = new URL(urlStr);
 		String crlf = "\r\n";
 		String boundary = generateBoundary();
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("POST");
-		con.setRequestProperty("Authorization", sessionId);
-		con.setRequestProperty("accept", "*/*");
-		con.setRequestProperty("Content-Type", "multipart/form-data; boundary="+boundary);
+		con.setRequestMethod(POST);
+		con.setRequestProperty(AUTHORIZATION, sessionId);
+		con.setRequestProperty(ACCEPT, "*/*");
+		con.setRequestProperty(CONTENT_TYPE, "multipart/form-data; boundary="+boundary);
 		con.setDoOutput(true);
 		con.setDoInput(true);
 		con.setUseCaches(false);
@@ -348,7 +367,7 @@ public class Requests{
 		}
 
 		addOpenDelimiter(body,boundary,crlf);
-		addFileData("file", fileName, byteFiles, body, directOutput, crlf);
+		addFileData(fileName, byteFiles, body, directOutput, crlf);
 		addCloseDelimiter(body, boundary, crlf);
 
 		int responseCode = con.getResponseCode();
@@ -359,23 +378,23 @@ public class Requests{
 	}
 
 	/**
-	 * https://developer.veevavault.com/api/18.3/#update-single-document
+	 * <a href="https://developer.veevavault.com/api/18.3/#update-single-document">...</a>
 	 *
-	 * @return Returns a veevaResponse.
+	 * @return Returns a VeevaResponse.
 	 */
 	public static VeevaResponse updateSingleDocument(String sessionId, String host, String apiVersion, String itemId, Map<String, Object> values, byte[] byteFiles, String fileName)
 			throws Exception {
 
-		String urlStr = "https://" + host + "/api/" + apiVersion + "/objects/documents/"+itemId;
+		String urlStr = HTTPS + host + API + apiVersion + "/objects/documents/"+itemId;
 		URL url = new URL(urlStr);
 		String crlf = "\r\n";
 		String boundary = generateBoundary();
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("POST");
-		con.setRequestProperty("Authorization", sessionId);
-		con.setRequestProperty("accept", "*/*");
-		con.setRequestProperty("Content-Type", "multipart/form-data; boundary="+boundary);
+		con.setRequestMethod(POST);
+		con.setRequestProperty(AUTHORIZATION, sessionId);
+		con.setRequestProperty(ACCEPT, "*/*");
+		con.setRequestProperty(CONTENT_TYPE, "multipart/form-data; boundary="+boundary);
 		con.setDoOutput(true);
 		con.setDoInput(true);
 		con.setUseCaches(false);
@@ -390,7 +409,7 @@ public class Requests{
 		}
 
 		addOpenDelimiter(body,boundary,crlf);
-		addFileData("file", fileName, byteFiles, body, directOutput, crlf);
+		addFileData(fileName, byteFiles, body, directOutput, crlf);
 		addCloseDelimiter(body, boundary, crlf);
 
 		int responseCode = con.getResponseCode();
@@ -401,10 +420,10 @@ public class Requests{
 	}
 
 	/**
-	 * https://developer.veevavault.com/api/18.3/#create-binder-relationship
-	 * https://developer.veevavault.com/api/18.3/#create-single-document-relationship
+	 * <a href="https://developer.veevavault.com/api/18.3/#create-binder-relationship">...</a>
+	 * <a href="https://developer.veevavault.com/api/18.3/#create-single-document-relationship">...</a>
 	 *
-	 * @return Returns a veevaResponse.
+	 * @return Returns a VeevaResponse.
 	 */
 	public static VeevaResponse createRelations(String sessionId, String host, String type, String apiVersion, String itemId, String version, String docIdRelation, String relationType)
 			throws Exception {
@@ -413,7 +432,7 @@ public class Requests{
 		String[] majorMinorVersion;
 		if (StringUtils.isNotBlank(version)) { //if we’re given a version we don’t need to //retrieve the last version of that document/binder etc.
 			majorMinorVersion = version.split("\\.");
-			urlStr = "https://" + host + "/api/" + apiVersion + "/objects/" + type + "/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1] + "/relationships/";
+			urlStr = HTTPS + host + API + apiVersion + "/objects/" + type + "/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1] + "/relationships/";
 		} else {
 			//retrieve the last version of that document/binder
 			VeevaResponse veevaResponse = getVersions(sessionId, host, type, apiVersion, itemId);
@@ -428,26 +447,24 @@ public class Requests{
 		URL url = new URL(urlStr);
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("POST");
-		con.setRequestProperty("Authorization", sessionId);
-		con.setRequestProperty("accept", "*/*");
-		con.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
+		con.setRequestMethod(POST);
+		con.setRequestProperty(AUTHORIZATION, sessionId);
+		con.setRequestProperty(ACCEPT, "*/*");
+		con.setRequestProperty(CONTENT_TYPE, "application/x-www-form-urlencoded");
 		con.setDoOutput(true);
 
 		Map<String, Object> params = new LinkedHashMap<>();
 		params.put("target_doc_id__v", docIdRelation);
 		params.put("relationship_type__v", relationType);
-		//params.put("target_major_version__v", majorMinorVersion[0]);
-		//params.put("target_minor_version__v", majorMinorVersion[1]);
 
 		StringBuilder postData = new StringBuilder();
 		for (Map.Entry<String, Object> param : params.entrySet()) {
 			if (postData.length() != 0) {
 				postData.append('&');
 			}
-			postData.append(URLEncoder.encode(param.getKey(), "UTF-8"));
+			postData.append(URLEncoder.encode(param.getKey(), StandardCharsets.UTF_8));
 			postData.append('=');
-			postData.append(URLEncoder.encode(String.valueOf(param.getValue()), "UTF-8"));
+			postData.append(URLEncoder.encode(String.valueOf(param.getValue()), StandardCharsets.UTF_8));
 		}
 
 		OutputStreamWriter osw = new OutputStreamWriter(
@@ -464,10 +481,10 @@ public class Requests{
 	}
 
 	/**
-	 * https://developer.veevavault.com/api/18.3/#retrieve-document-relationship
-	 * https://developer.veevavault.com/api/18.3/#retrieve-binder-relationship
+	 * <a href="https://developer.veevavault.com/api/18.3/#retrieve-document-relationship">...</a>
+	 * <a href="https://developer.veevavault.com/api/18.3/#retrieve-binder-relationship">...</a>
 	 *
-	 * @return Returns a veevaResponse.
+	 * @return Returns a VeevaResponse.
 	 */
 	public static VeevaResponse retrieveAllRelations(String sessionId, String host, String type, String apiVersion, String itemId, String version)
 			throws Exception {
@@ -476,7 +493,7 @@ public class Requests{
 		String[] majorMinorVersion;
 		if (StringUtils.isNotBlank(version)) {
 			majorMinorVersion = version.split("\\.");
-			urlStr = "https://" + host + "/api/" + apiVersion + "/objects/" + type + "/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1] + "/relationships";
+			urlStr = HTTPS + host + API + apiVersion + "/objects/" + type + "/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1] + "/relationships";
 		} else {
 			//retrieve the last version of that document/binder
 			VeevaResponse veevaResponse = getVersions(sessionId, host, type, apiVersion, itemId);
@@ -491,9 +508,9 @@ public class Requests{
 		URL url = new URL(urlStr);
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("GET");
-		con.setRequestProperty("Authorization", sessionId);
-		con.setRequestProperty("accept", "*/*");
+		con.setRequestMethod(GET);
+		con.setRequestProperty(AUTHORIZATION, sessionId);
+		con.setRequestProperty(ACCEPT, "*/*");
 		con.setDoOutput(true);
 
 		int responseCode = con.getResponseCode();
@@ -504,41 +521,39 @@ public class Requests{
 	}
 
 	/**
-	 * https://developer.veevavault.com/api/18.3/#add-document-to-binder
+	 * <a href="https://developer.veevavault.com/api/18.3/#add-document-to-binder">...</a>
 	 *
-	 * @return Returns a veevaResponse.
+	 * @return Returns a VeevaResponse.
 	 */
 	public static VeevaResponse addDocumentToBinder(String sessionId, String host, String apiVersion, String binderId, String orderV, String docId, String parentId)
 			throws Exception {
 
-		String urlStr = "https://" + host + "/api/" + apiVersion + "/objects/binders/" + binderId + "/documents";
+		String urlStr = HTTPS + host + API + apiVersion + "/objects/binders/" + binderId + "/documents";
 
 		URL url = new URL(urlStr);
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("POST");
-		con.setRequestProperty("Authorization", sessionId);
-		con.setRequestProperty("accept", "*/*");
-		con.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
+		con.setRequestMethod(POST);
+		con.setRequestProperty(AUTHORIZATION, sessionId);
+		con.setRequestProperty(ACCEPT, "*/*");
+		con.setRequestProperty(CONTENT_TYPE, "application/x-www-form-urlencoded");
 		con.setDoOutput(true);
 
 		Map<String, Object> params = new LinkedHashMap<>();
 		params.put("document_id__v", docId);
-		if (parentId != null)
-			params.put("parent_id__v", parentId);
-		else
-			params.put("parent_id__v", "");
-		if (orderV != null)
+		params.put("parent_id__v", Objects.requireNonNullElse(parentId, ""));
+		if (orderV != null) {
 			params.put("order__v", orderV); //optional
+		}
 
 		StringBuilder postData = new StringBuilder();
 		for (Map.Entry<String, Object> param : params.entrySet()) {
 			if (postData.length() != 0) {
 				postData.append('&');
 			}
-			postData.append(URLEncoder.encode(param.getKey(), "UTF-8"));
+			postData.append(URLEncoder.encode(param.getKey(), StandardCharsets.UTF_8));
 			postData.append('=');
-			postData.append(URLEncoder.encode(String.valueOf(param.getValue()), "UTF-8"));
+			postData.append(URLEncoder.encode(String.valueOf(param.getValue()), StandardCharsets.UTF_8));
 		}
 
 		OutputStreamWriter osw = new OutputStreamWriter(
@@ -555,10 +570,10 @@ public class Requests{
 	}
 
 	/**
-	 * https://developer.veevavault.com/api/18.3/#update-document-version
-	 * https://developer.veevavault.com/api/18.3/#update-binder-version
+	 * <a href="https://developer.veevavault.com/api/18.3/#update-document-version">...</a>
+	 * <a href="https://developer.veevavault.com/api/18.3/#update-binder-version">...</a>
 	 *
-	 * @return Returns a veevaResponse.
+	 * @return Returns a VeevaResponse.
 	 */
 	public static VeevaResponse updateVersionFields(String sessionId, String host, String apiVersion, String itemId, String version, Map<String, Object> fields)
 			throws Exception {
@@ -566,16 +581,16 @@ public class Requests{
 		String urlStr;
 		if (StringUtils.isNotBlank(version)) {
 			String[] majorMinorVersion = version.split("\\.");
-			urlStr = "https://" + host + "/api/" + apiVersion + "/objects/documents/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1];
+			urlStr = HTTPS + host + API + apiVersion + "/objects/documents/" + itemId + "/versions/" + majorMinorVersion[0] + "/" + majorMinorVersion[1];
 		} else
-			urlStr = "https://" + host + "/api/" + apiVersion + "/objects/documents/" + itemId;
+			urlStr = HTTPS + host + API + apiVersion + "/objects/documents/" + itemId;
 		URL url = new URL(urlStr);
 
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
-		con.setRequestMethod("PUT");
-		con.setRequestProperty("Authorization", sessionId);
-		con.setRequestProperty("accept", "*/*");
-		con.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
+		con.setRequestMethod(PUT);
+		con.setRequestProperty(AUTHORIZATION, sessionId);
+		con.setRequestProperty(ACCEPT, "*/*");
+		con.setRequestProperty(CONTENT_TYPE, "application/x-www-form-urlencoded");
 		con.setDoOutput(true);
 
 		StringBuilder postData = new StringBuilder();
@@ -583,9 +598,9 @@ public class Requests{
 			if (postData.length() != 0) {
 				postData.append('&');
 			}
-			postData.append(URLEncoder.encode(param.getKey(), "UTF-8"));
+			postData.append(URLEncoder.encode(param.getKey(), StandardCharsets.UTF_8));
 			postData.append('=');
-			postData.append(URLEncoder.encode(String.valueOf(param.getValue()), "UTF-8"));
+			postData.append(URLEncoder.encode(String.valueOf(param.getValue()), StandardCharsets.UTF_8));
 		}
 
 		OutputStreamWriter osw = new OutputStreamWriter(
@@ -613,17 +628,21 @@ public class Requests{
 		body.flush();
 	}
 
-	private static void addFileData(String paramName, String filename, byte[] byteStream, PrintWriter body,
+	private static void addFileData(String filename, byte[] byteStream, PrintWriter body,
 									OutputStream directOutput, String crlf) throws IOException {
 
 		body.append("Content-Disposition: form-data; name=\"")
-			.append(paramName)
+			.append("file")
 			.append("\"; filename=\"")
 			.append(filename)
 			.append("\"")
 			.append(crlf);
-		body.append("Content-Type: application/octet-stream").append(crlf);
-		body.append("Content-Transfer-Encoding: binary").append(crlf);
+		body.append(CONTENT_TYPE)
+			.append(": application/octet-stream")
+			.append(crlf);
+		body.append("Content-Transfer-Encoding")
+			.append(": binary")
+			.append(crlf);
 		body.append(crlf);
 		body.flush();
 
@@ -646,7 +665,6 @@ public class Requests{
 
 	private static String generateBoundary() {
 		StringBuilder buffer = new StringBuilder();
-		Random rand = new Random();
 		int count = rand.nextInt(11) + 30; // a random size from 30 to 40
 		for (int i = 0; i < count; i++) {
 			buffer.append(MULTIPART_CHARS[rand.nextInt(MULTIPART_CHARS.length)]);
